# KalshiCast-v10

./: .editorconfig  .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  KalshiCast_v10.md  LICENSE  README.md  SECURITY.md  analyze_backtest.py  pyproject.toml  requirements.txt  test_phase3.py
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: calibration.yml  discover_kalshi_cities.yml  health.yml  kalshi_diagnostic.yml  market_open.yml  morning.yml  night.yml  test.yml
docs/: ARCHITECTURE.md  CLI.md  QUICKSTART.md
kalshicast/: __init__.py  __main__.py  backtest.py  logging_config.py
kalshicast/backfill/: __init__.py  config.py  errors.py  forecasts.py  observations.py  orchestrator.py  run.py  validate.py
kalshicast/collection/: __init__.py  collector_harness.py  kalshi_markets.py  lead_time.py  sources_registry.py  time_axis.py
kalshicast/config/: __init__.py  params_bootstrap.py  sources.py  stations.py
kalshicast/db/: __init__.py  connection.py  operations.py  schema.py
kalshicast/evaluation/: __init__.py  adverse_selection.py  brier.py  bss_matrix.py  calibration.py  financial.py  pattern_classifier.py
kalshicast/execution/: __init__.py  gates.py  ibe.py  kalshi_api.py  kelly.py  orders.py  positions.py  risk_manager.py  vwap.py
kalshicast/ml_v1/: PIPELINE_STATE.md  analyze_diagnostics.py  backtest.py  config.py  dataset.py  model_performance.md  predict.py  train.py  tune.py
kalshicast/pipeline/: __init__.py  health.py  market_open.py  morning.py  night.py  paper_sim.py  rollover.py
kalshicast/pricing/: __init__.py  bin_convention.py  shadow_book.py  truncation.py
kalshicast/processing/: __init__.py  sigma.py  (+6 more)
scripts/: discover_kalshi_cities.py  kalshi_diagnostic.py  log_gh_failure.py
(+316 files in other folders)
