[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kalshicast"
version = "10.0.0"
description = "Quantitative weather-contract pricing and betting pipeline for Kalshi"
requires-python = ">=3.11"
dependencies = [
    "oracledb>=2.5.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pytz>=2024.1",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
