[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshicast"
version = "10.0.0"
description = "Quantitative weather-contract pricing and betting pipeline for Kalshi"
requires-python = ">=3.11"
dependencies = [
    "oracledb>=2.5.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pytz>=2024.1",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["kalshicast/ml_v1/data", "scripts/legacy"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function calls in defaults are intentional in some collectors
]

[tool.ruff.lint.per-file-ignores]
"kalshicast/tests/*" = ["F401", "F811"]  # fixtures can look unused to ruff

[tool.pytest.ini_options]
testpaths = ["kalshicast/tests"]
markers = [
    "integration: tests that exercise external systems (DB, network, Kalshi API)",
    "slow: tests that take more than a few seconds to run",
]
